--- a/Banking.Account.Command.Application/Banking.Account.Command.Application.csproj
+++ b/Banking.Account.Command.Application/Banking.Account.Command.Application.csproj
@@ -7,9 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="MediatR" Version="12.4.0" />
-    <PackageReference Include="MongoDB.Bson" Version="2.28.0" />
-    <PackageReference Include="MongoDB.Driver" Version="2.28.0" />
+    <Folder Include="Features\" />
+    <Folder Include="Aggregates\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Banking.Account.Command.Domain\Banking.Account.Command.Domain.csproj" />
   </ItemGroup>
 
 </Project>
