--- a/Banking.Account.Command.Domain/Banking.Account.Command.Domain.csproj
+++ b/Banking.Account.Command.Domain/Banking.Account.Command.Domain.csproj
@@ -7,9 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="MediatR" Version="12.4.0" />
-    <PackageReference Include="MongoDB.Bson" Version="2.28.0" />
-    <PackageReference Include="MongoDB.Driver" Version="2.28.0" />
+    <ProjectReference Include="..\Banking.Cqrs.Core\Banking.Cqrs.Core.csproj" />
   </ItemGroup>
 
 </Project>
