repositories and command microservices advances

--- a/Banking.Account.Command.Infrastructure/Banking.Account.Command.Infrastructure.csproj
+++ b/Banking.Account.Command.Infrastructure/Banking.Account.Command.Infrastructure.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Banking.Account.Command.Application\Banking.Account.Command.Application.csproj" />
+    <ProjectReference Include="..\Banking.Cqrs.Core\Banking.Cqrs.Core.csproj" />
   </ItemGroup>
 
 </Project>
